2006-10-17  Paolo Carlini  <pcarlini@suse.de>

PR libstdc++/26020
	* include/bits/stl_iterator_base_funcs.h (advance): Convert
	distance parameter to iterator_traits<>::difference_type.
	* testsuite/24_iterators/26020.cc: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@117827 138bc75d-0d04-0410-961f-82ee72b054a4